-Added design time dbcontext factory for migrations management. -Fixed some conection strings stuff.

--- a/StudyCase/appsettings.Development.json
+++ b/StudyCase/appsettings.Development.json
@@ -6,5 +6,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server = tcp:localhost,1433; Database = StudyCase; User Id = sa; Password = SaPass123; MultipleActiveResultSets=True"
   }
 }
