--- a/StudyCase/appsettings.json
+++ b/StudyCase/appsettings.json
@@ -13,7 +13,6 @@
     }
   },
   "ConnectionStrings": {
-    "DevConnection": "Server = tcp:localhost,1433; Database = StudyCase; User Id = sa; Password = SaPass123; MultipleActiveResultSets=True",
-    "ProductionConnection": "Server = tcp:localhost,1433; Database = StudyCase; User Id = sa; Password = SaPass123; MultipleActiveResultSets=True"
+    "DefaultConnection": "Server = tcp:localhost,1433; Database = StudyCase; User Id = sa; Password = SaPass123; MultipleActiveResultSets=True"
   }
 }
