-Working Identity basic implementation;

--- a/StudyCase/appsettings.json
+++ b/StudyCase/appsettings.json
@@ -14,5 +14,10 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server = tcp:localhost,1433; Database = StudyCase; User Id = sa; Password = SaPass123; MultipleActiveResultSets=True"
+  },
+  "Tokens" :{
+    "JwtKey": "SOME_RANDOM_KEY_DO_NOT_SHARE2",
+    "JwtIssuer": "http://yourdomain.com",
+    "JwtExpireDays": 1  
   }
 }
