Initial implementation for custom UserStore and RoleStore.

--- a/StudyCase/appsettings.Development.json
+++ b/StudyCase/appsettings.Development.json
@@ -8,6 +8,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server = tcp:localhost,1433; Database = StudyCase; User Id = sa; Password = SaPass123; MultipleActiveResultSets=True"
+    "DefaultConnection": "Server = tcp:localhost,1433; Database = StudyCase; User Id = sa; Password = Admin#123; MultipleActiveResultSets=True"
   }
 }
