--- a/StudyCase/appsettings.json
+++ b/StudyCase/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server = tcp:localhost,1433; Database = StudyCase; User Id = sa; Password = SaPass123; MultipleActiveResultSets=True"
+    "DefaultConnection": "Server = tcp:localhost,1433; Database = StudyCase; User Id = sa; Password = Admin#123; MultipleActiveResultSets=True"
   },
   "Tokens": {
       "JwtKey": "18da6495-bd01-443a-941e-f758f340e502",
